# htmlTP

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: extensions.hpp.2E0B132A94CE4794.idx  htmlTP.hpp.771689B2E1F236DD.idx  htmlTP_state.cpp.70399C72B26595BA.idx  htmlTemplate.cpp.B07ACB2924387759.idx  test.cpp.5B12448A52333CE5.idx
include/htmlTP/: htmlTP.hpp
src/: CMakeLists.txt
src/htmlTP/: CMakeLists.txt  extensions.hpp  htmlTP_parser.cpp  htmlTP_priv.hpp  htmlTP_state.cpp  htmlTemplate.cpp  registry.cpp  utils.cpp  utils.hpp
tests/: CMakeLists.txt  test.cpp
